# carla-wrapper

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  carla_server.sh  config_example.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  docker-publish-dev.yml  docker-publish.yml
carla_wrapper/: lifecycle.py  server.py  simulation.py  version.py
tests/: test_contract.py  test_smoke.py
