[project]
name = "carla-wrapper"
version = "0.1.0"
description = "A carla wrapper for SBSVS"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "antlr4-python3-runtime==4.10",
    "ephem>=4.2",
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "networkx==3.4.2",
    "numpy==1.24.4 ; python_full_version >= '3'",
    "opencv-python==4.7.0.72",
    "psutil>=7.2.2",
    "py-trees==0.8.3",
    "pisa-api>=0.1.20",
    "shapely==2.1.1",
    "simple-watchdog-timer>=0.1.1",
    "six>=1.17.0",
    "tabulate>=0.9.0",
    "xmlschema==1.0.18",
]

[tool.uv.sources]
pisa-api = { git = "https://github.com/PISA-Hut/pisa-api.git" }
